According to some sources, pages requires a custom personal access token
From: https://github.community/t5/GitHub-Pages/Github-action-not-triggering-gh-pages-upon-push/td-p/26869
> The `GITHUB_TOKEN` that is provided as a part of GitHub Actions doesn't have authorization to create any successive events, such as GitHub Pages builds. So while you can push to the `gh-pages` branch using the `GITHUB_TOKEN`, it won't spawn a GitHub Pages build. You'll need to create a personal access token and supply it to your GitHub Action as a secret.

From https://github.com/shalzz/zola-deploy-action:
>    TOKEN: Personal Access key with the scope public_repo, we need this to push the site files back to the repo.
>    ( Actions already provides a GITHUB_TOKEN which is an installation token and does not trigger a GitHub Pages builds hence we need a personal access token )

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -20,6 +20,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v1.1.0
       if: success()
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: ./public
