--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -17,9 +17,8 @@ jobs:
       with:
         args: ./build.sh
     - name: deploy
-      uses: peaceiris/actions-gh-pages@v1.1.0
+      uses: peaceiris/actions-gh-pages@v3
       if: success()
-      env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
